--- a/index.html
+++ b/index.html
@@ -8,16 +8,52 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <body>
-    <section>
+    <section class="top-banner">
      <div class="half-width">
-    <h1>Welcome To</h1>
-    <h1> <span class="name-highlight">Emon</span> Website</h1>
-    <h3>world-class professional web dev</h3>
-    <p>Hi i am Hossain Emon.I am student.I am a professional web Devoloper. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod exercitationem explicabo, quae aspernatur aperiam voluptatum amet quasi eligendi omnis natus.</p>
+        <h1>Welcome To</h1>
+        <h1> <span class="orange-highlight">Emon</span> Website</h1>
+        <h3>world-class professional web dev</h3>
+        <p>Hi i am Hossain Emon.I am student.I am a professional web Devoloper. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod exercitationem explicabo, quae aspernatur aperiam voluptatum amet quasi eligendi omnis natus.</p>
+         <a class="link-button" target="blank" href="https://www.linkedin.com/feed/?trk=homepage-basic_google-one-tap-submit"> Hire me</a>
      </div>
      <div class="half-width">
     <img src="images/image 11.png" alt="">
      </div>
     </section>
+
+
+
+    <section class="dream-area">
+        <div class="half-width">
+               <img src="images/profile2.png" alt="">
+        </div>
+         <div class="half-width">
+             <h2>Big dream</h2>
+             <h3>Become World's No.1 Devoloper</h3>
+              <p>I already learned the basic HTML and CSS. I can build simple website.I can teach Programing-hero.com how to make simple website.My goal is to build 3 websites and learn advancedd topics</p>
+              <a class="link-button" target="blank" href="file:///C:/web%20devolopment/projects/web-protfolio/index.html">DOWNLOOD RESUME</a>
+         </div>
+    </section>
+
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2021 -Present |Pro level Web Developer</h3>
+            <p>I am the master of HTML,CSS and Javascript. I know everything needed to make a website function effcient.I didn't stop with the web.I wwnt beyond with most popular Javascript framework called vue JS. I even know the deployment server and security. INSHALLAH I will give you 100% web soluation</p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Proraming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web Developer. I made their website amd showed it to them. They liked it. And uploaded the content. It eas fun working at Programing Hero.</p>
+
+        </div>
+
+    </section>
+
+    <footer>
+        <p>Hossain 2021,all rights reserved</p>
+    </footer>
 </body>
 </html>
